custom_loss was added

--- a/PyTorch/batch_size.ipynb
+++ b/PyTorch/batch_size.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.optim import SGD\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time"
    ]
   },
   {
@@ -76,6 +79,119 @@
    "outputs": [],
    "source": [
     "dl = DataLoader(ds, batch_size=2, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[7., 8.],\n",
+      "        [3., 4.]]) tensor([[15.],\n",
+      "        [ 7.]])\n",
+      "tensor([[5., 6.],\n",
+      "        [1., 2.]]) tensor([[11.],\n",
+      "        [ 3.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x,y in dl:\n",
+    "    print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyNeuralNet (nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "    \n",
+    "        self.input_to_hidden_layer = nn.Linear(2, 8)\n",
+    "        self.hidden_layer_activation = nn.ReLU()\n",
+    "        self.hidden_to_output_layer = nn.Linear(8,1)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.input_to_hidden_layer(x)\n",
+    "        x = self.hidden_layer_activation(x)\n",
+    "        x = self.hidden_to_output_layer(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_net = MyNeuralNet()\n",
+    "loss_func = nn.MSELoss()\n",
+    "opt = SGD(my_net.parameters(), lr= 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0852088928222656\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_history = []\n",
+    "start = time.time()\n",
+    "for _ in range(50):\n",
+    "    for data in dl:\n",
+    "        x, y = data\n",
+    "        opt.zero_grad()\n",
+    "        loss_value = loss_func(my_net(x), y)\n",
+    "        loss_value.backward()\n",
+    "        opt.step()\n",
+    "        loss_history.append(loss_value)\n",
+    "end = time.time()\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_x = [[10,11]]\n",
+    "val_x = torch.tensor(val_x).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[21.1465]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_net(val_x)"
    ]
   },
   {
