dependencies were added

--- a/YOLO_Drowsiness/main.ipynb
+++ b/YOLO_Drowsiness/main.ipynb
@@ -167,14 +167,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "collecting images for awake\n",
+      "collecting images for awake, image number 0\n",
+      "collecting images for awake, image number 1\n",
+      "collecting images for awake, image number 2\n",
+      "collecting images for awake, image number 3\n",
+      "collecting images for awake, image number 4\n",
+      "collecting images for awake, image number 5\n",
+      "collecting images for awake, image number 6\n",
+      "collecting images for awake, image number 7\n",
+      "collecting images for awake, image number 8\n",
+      "collecting images for awake, image number 9\n",
+      "collecting images for awake, image number 10\n",
+      "collecting images for awake, image number 11\n",
+      "collecting images for awake, image number 12\n",
+      "collecting images for awake, image number 13\n",
+      "collecting images for awake, image number 14\n",
+      "collecting images for awake, image number 15\n",
+      "collecting images for awake, image number 16\n",
+      "collecting images for awake, image number 17\n",
+      "collecting images for awake, image number 18\n",
+      "collecting images for awake, image number 19\n",
+      "collecting images for drowsy\n",
+      "collecting images for drowsy, image number 0\n",
+      "collecting images for drowsy, image number 1\n",
+      "collecting images for drowsy, image number 2\n",
+      "collecting images for drowsy, image number 3\n",
+      "collecting images for drowsy, image number 4\n",
+      "collecting images for drowsy, image number 5\n",
+      "collecting images for drowsy, image number 6\n",
+      "collecting images for drowsy, image number 7\n",
+      "collecting images for drowsy, image number 8\n",
+      "collecting images for drowsy, image number 9\n",
+      "collecting images for drowsy, image number 10\n",
+      "collecting images for drowsy, image number 11\n",
+      "collecting images for drowsy, image number 12\n",
+      "collecting images for drowsy, image number 13\n",
+      "collecting images for drowsy, image number 14\n",
+      "collecting images for drowsy, image number 15\n",
+      "collecting images for drowsy, image number 16\n",
+      "collecting images for drowsy, image number 17\n",
+      "collecting images for drowsy, image number 18\n",
+      "collecting images for drowsy, image number 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cap = cv2.VideoCapture(0)\n",
+    "# for label in labels:\n",
+    "#     print(f'collecting images for {label}')\n",
+    "#     time.sleep(5)\n",
+    "    \n",
+    "#     for img_num in range(number_imgs):\n",
+    "#         print(f'collecting images for {label}, image number {img_num}')\n",
+    "        \n",
+    "#         ret, frame = cap.read()\n",
+    "        \n",
+    "#         image_name = os.path.join(IMAGES_PATH, label+'.'+str(uuid.uuid1())+'.jpg')\n",
+    "        \n",
+    "#         cv2.imwrite(image_name, frame)\n",
+    "        \n",
+    "#         cv2.imshow('Image Collection', frame)\n",
+    "        \n",
+    "#         time.sleep(2)\n",
+    "        \n",
+    "#         if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "#             break\n",
+    "        \n",
+    "# cap.release()\n",
+    "# cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'labelImg'...\n",
+      "remote: Enumerating objects: 2097, done.\u001b[K\n",
+      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Total 2097 (delta 0), reused 4 (delta 0), pack-reused 2090\u001b[K\n",
+      "Receiving objects: 100% (2097/2097), 237.14 MiB | 1.13 MiB/s, done.\n",
+      "Resolving deltas: 100% (1245/1245), done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git clone https://github.com/heartexlabs/labelImg.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyqt5\n",
+      "  Using cached PyQt5-5.15.7-cp37-abi3-macosx_10_13_x86_64.whl (7.0 MB)\n",
+      "Collecting lxml\n",
+      "  Using cached lxml-4.9.1.tar.gz (3.4 MB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hCollecting PyQt5-Qt5>=5.15.0\n",
+      "  Downloading PyQt5_Qt5-5.15.2-py3-none-macosx_10_13_intel.whl (40.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.5/40.5 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting PyQt5-sip<13,>=12.11\n",
+      "  Downloading PyQt5_sip-12.11.0-cp310-cp310-macosx_10_9_universal2.whl (142 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m142.5/142.5 kB\u001b[0m \u001b[31m367.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hBuilding wheels for collected packages: lxml\n",
+      "  Building wheel for lxml (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for lxml: filename=lxml-4.9.1-cp310-cp310-macosx_10_9_x86_64.whl size=1490718 sha256=1b8b9a904b3eb804640f36890884b3ee23dd347d3249c0869f321031e8272c41\n",
+      "  Stored in directory: /Users/kasra/Library/Caches/pip/wheels/72/18/e4/38f0853d6c6d0746db297b9d7daa953b09adb6decff52dd7fb\n",
+      "Successfully built lxml\n",
+      "Installing collected packages: PyQt5-Qt5, PyQt5-sip, lxml, pyqt5\n",
+      "Successfully installed PyQt5-Qt5-5.15.2 PyQt5-sip-12.11.0 lxml-4.9.1 pyqt5-5.15.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install pyqt5 lxml --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(0)\n",
-    "for label in labels:\n",
-    "    print(f'collecting images for {label}')"
+    "! cd labelImg && pyrcc5 -o libs/resources.py resources.qrc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m==>\u001b[0m \u001b[1mDownloading https://ghcr.io/v2/homebrew/core/libxml2/manifests/2.10.3\u001b[0m\n",
+      "######################################################################## 100.0%\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mDownloading https://ghcr.io/v2/homebrew/core/libxml2/blobs/sha256:507dac0563\u001b[0m\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mDownloading from https://pkg-containers.githubusercontent.com/ghcr1/blobs/sh\u001b[0m\n",
+      "######################################################################## 100.0%\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mPouring libxml2--2.10.3.monterey.bottle.tar.gz\u001b[0m\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mCaveats\u001b[0m\n",
+      "libxml2 is keg-only, which means it was not symlinked into /usr/local,\n",
+      "because macOS already provides this software and installing another version in\n",
+      "parallel can cause all kinds of trouble.\n",
+      "\n",
+      "If you need to have libxml2 first in your PATH, run:\n",
+      "  echo 'export PATH=\"/usr/local/opt/libxml2/bin:$PATH\"' >> ~/.zshrc\n",
+      "\n",
+      "For compilers to find libxml2 you may need to set:\n",
+      "  export LDFLAGS=\"-L/usr/local/opt/libxml2/lib\"\n",
+      "  export CPPFLAGS=\"-I/usr/local/opt/libxml2/include\"\n",
+      "\n",
+      "For pkg-config to find libxml2 you may need to set:\n",
+      "  export PKG_CONFIG_PATH=\"/usr/local/opt/libxml2/lib/pkgconfig\"\n",
+      "\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mSummary\u001b[0m\n",
+      "🍺  /usr/local/Cellar/libxml2/2.10.3: 199 files, 6.2MB\n",
+      "\u001b[34m==>\u001b[0m \u001b[1mRunning `brew cleanup libxml2`...\u001b[0m\n",
+      "Disable this behaviour by setting HOMEBREW_NO_INSTALL_CLEANUP.\n",
+      "Hide these hints with HOMEBREW_NO_ENV_HINTS (see `man brew`).\n"
+     ]
+    }
+   ],
+   "source": [
+    "! brew install libxml2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
